--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 xxxxxxxx<br/>
                 xxxxxxxx<br/>
                 xxxxxxxx<br/>
+                <a href="contactUs.html">Contact Us</a>
             </div>
         </article>
        <!--<div id="footer ">
